[gd_scene load_steps=2 format=3 uid="uid://c8ryh18wxr7m1"]

[ext_resource type="Script" path="res://scripts/tests/data_test_scene.gd" id="1_sr7lo"]

[node name="DataTestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sr7lo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Data Test Scene"

[node name="EnemyHeader" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enemies"

[node name="EnemyOutputLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = false
fit_content = true
scroll_active = false

[node name="PassiveHeader" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Passives"

[node name="PassiveOutputLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = false
fit_content = true
scroll_active = false

[node name="SkillHeader" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Skills"

[node name="SkillOutputLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = false
fit_content = true
scroll_active = false
